# SimpleGrpc

./: CMakeLists.txt  README.md  client.cc  demo.grpc.pb.cc  demo.grpc.pb.h  demo.pb.cc  demo.pb.h  demo.proto  server.cc
